scripted tests for sbt 0.13.0-Beta2